--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: black;">
     <div style="text-align: center;">
-        <h1>THE MAZE GAME</h1>
+        <h1 style="color: lightgray;">THE MAZE GAME</h1>
         <br>
         <hr>
         <br><br><br>
