--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button id="hard" onclick="selectHard()">Hard</button>
             <button id="monster" onclick="selectMonster()">Monster Difficulty*</button>
         </div>
-        <p style="color: lightgray;">*<i>Warning, this mode is extremely dangerous, and takes a long time to load, please be patient!</i></p>
+        <p style="color: lightgray;">*<i>Warning, this mode is extremely difficult, and takes a long time to load and complete, please be patient!</i></p>
         <br>
         <hr>
         <br><br><br>
