added a new maze generation algo to spice things up

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             <button id="medium" onclick="selectMedium()">Medium</button>
             <button id="hard" onclick="selectHard()">Hard</button>
             <button id="monster" onclick="selectMonster()">Monster Difficulty*</button>
+            <input type="checkbox" id="otherAlgo" name="otherAlgo" value="otherAlgo">
+                <label for="otherAlgo" style="color: lightgray;">different maze gen algorithm</label><br>
         </div>
-        <p style="color: lightgray;">*<i>Warning, this mode is extremely difficult, and takes a long time to load and complete, please be patient!</i></p>
+        <p style="color: lightgray;">*<i>Warning, this mode is extremely dangerous, and takes a long time to load, please be patient!</i></p>
         <br>
         <hr>
         <br><br><br>
@@ -24,10 +26,15 @@
     </div>
     <script>
         var difficulty = undefined;
+        var differentAlgo = false;
 
         function selectEasy() {
             console.log("easy");
             difficulty = "easy";
+            if ($('#otherAlgo').prop("checked") === true) {
+                differentAlgo = true;
+            }
+            $('#otherAlgo').attr("disabled", true);
             $('#easy').attr("disabled", true);
             $('#medium').attr("disabled", true);
             $('#hard').attr("disabled", true);
@@ -38,6 +45,10 @@
         function selectMedium() {
             console.log("medium");
             difficulty = "medium";
+            if ($('#otherAlgo').prop("checked") === true) {
+                differentAlgo = true;
+            }
+            $('#otherAlgo').attr("disabled", true);
             $('#easy').attr("disabled", true);
             $('#medium').attr("disabled", true);
             $('#hard').attr("disabled", true);
@@ -48,6 +59,10 @@
         function selectHard() {
             console.log("hard");
             difficulty = "hard";
+            if ($('#otherAlgo').prop("checked") === true) {
+                differentAlgo = true;
+            }
+            $('#otherAlgo').attr("disabled", true);
             $('#easy').attr("disabled", true);
             $('#medium').attr("disabled", true);
             $('#hard').attr("disabled", true);
@@ -59,6 +74,10 @@
         function selectMonster() {
             console.log("Monster Difficult");
             difficulty = "monster";
+            if ($('#otherAlgo').prop("checked") === true) {
+                differentAlgo = true;
+            }
+            $('#otherAlgo').attr("disabled", true);
             $('#easy').attr("disabled", true);
             $('#medium').attr("disabled", true);
             $('#hard').attr("disabled", true);
@@ -100,22 +119,47 @@
             $('#canvaswrapper').css("left", (screen.width-canvas.width)/2);
             
             let grid = [];
+            let cells = [];
+
             for (let x = 0; x < width; x++) {
                 for (let y = 0; y < height; y++) {
                     var cell = new Cell(x, y);
                     //debugger;
                     grid.push(cell);
+                    if (differentAlgo) {
+                        cells.push(cell);
+                    }
                 }
             }
 
-            var current = grid[0];
-            while (current) {
+            if (!differentAlgo) { 
+                var current = grid[0];
+                while (current) {
+                    current.visited = true;
+                    if (current.hasUnvisitedNeighbour()) {
+                        var next = current.getRandomUnvisitedNeighbour();
+                        current = next;
+                    } else {
+                        current = current.parent;
+                    }
+                } 
+            } else {
+                var random = Math.round(Math.random() * (cells.length-1));
+                var current = cells[random];
                 current.visited = true;
-                if (current.hasUnvisitedNeighbour()) {
-                    var next = current.getRandomUnvisitedNeighbour();
-                    current = next;
-                } else {
-                    current = current.parent;
+                cells.splice(random, 1);
+                console.log(grid.length);
+                while (cells.length > 0) {
+                    random = Math.round(Math.random() * (cells.length-1));
+                    //console.log(random);
+                    current = cells[random];
+                    
+                    if (current.canConnectToMaze()) {
+                        debugger;
+                        current.connectToMaze();
+                        cells.splice(random, 1);
+                        console.log("connected cell");
+                    }
                 }
             }
 
@@ -247,6 +291,72 @@
                     chosen.parent = this.self;
 
                     return chosen;
+                }
+
+                this.canConnectToMaze = function() {
+                    if (this.y >= 1) {
+                        var top = grid[index(this.x, this.y - 1)];
+                        if (top.visited) {
+                            return true;
+                        }
+                    }
+                    if (this.x <= width - 2) {
+                        var right = grid[index(this.x + 1, this.y)];
+                        if (right.visited) {
+                            return true;
+                        }
+                    }
+                    if (this.y <= height - 2) {
+                        var bottom = grid[index(this.x, this.y + 1)];
+                        if (bottom.visited) {
+                            return true;
+                        }
+                    }
+                    if (this.x >= 1) {
+                        var left = grid[index(this.x - 1, this.y)];
+                        if (left.visited) {
+                            return true;
+                        }
+                    }
+                    return false;
+                }
+
+                this.connectToMaze = function() {
+                    this.visited = true;
+
+                    let connectableCells = [];
+
+                    if (this.y >= 1) {
+                        var top = grid[index(this.x, this.y - 1)];
+                        if (top.visited) {
+                            connectableCells.push({cell: top, wall: 0, otherWall: 2});
+                        }
+                    }
+                    if (this.x <= width - 2) {
+                        var right = grid[index(this.x + 1, this.y)];
+                        if (right.visited) {
+                            connectableCells.push({cell: right, wall: 1, otherWall: 3});
+                        }
+                    }
+                    if (this.y <= height - 2) {
+                        var bottom = grid[index(this.x, this.y + 1)];
+                        if (bottom.visited) {
+                            connectableCells.push({cell: bottom, wall: 2, otherWall: 0});
+                        }
+                    }
+                    if (this.x >= 1) {
+                        var left = grid[index(this.x - 1, this.y)];
+                        if (left.visited) {
+                            connectableCells.push({cell: left, wall: 3, otherWall: 1});
+                        }
+                    }
+
+                    var choice = connectableCells[Math.round(Math.random() * (connectableCells.length - 1))];
+                    var chosen = choice.cell;
+
+                    this.walls[choice.wall] = false;
+                    chosen.walls[choice.otherWall] = false;
+                    this.parent = chosen;
                 }
 
                 this.show = function() {
